--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -1,5 +1,5 @@
-#Mon Sep 05 18:25:25 CEST 2022
+#Wed Sep 07 23:53:31 CEST 2022
 name=UniteBraveryBot
 description=A Discord bot heavily inspired by Ultimate Bravery to spice up your Pokemon Unite experience.
-version=1.0-SNAPSHOT
+version=1.0.0
 url=https\://github.com/Abzylicious/UniteBraveryBot
