--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -1,5 +1,5 @@
-#Wed Sep 14 21:15:54 CEST 2022
+#Mon Nov 21 20:51:20 CET 2022
 name=UniteBraveryBot
 description=A Discord bot heavily inspired by Ultimate Bravery to spice up your Pokemon Unite experience.
-version=1.1.0
+version=1.1.1
 url=https\://github.com/Abzylicious/UniteBraveryBot
